--- a/src/app/components/userdashboard/userdashboard.component.css
+++ b/src/app/components/userdashboard/userdashboard.component.css
@@ -256,10 +256,12 @@ background-color: white;
 border-radius: 10px;
 border: none;
 width: 35%;
+min-height: 200px;
 transition: transform .4s;
 box-shadow: 5px 10px 18px #888888;
 margin: 2% 3% 5.5% 3%;
 padding: 3%;
+position: relative;
 }
 .dashboard-card:hover
 {
@@ -273,15 +275,21 @@ padding: 3%;
 .circle{
 border-radius: 50%;
 width: 30%;
-height: 80px;
+height: 30%;
 float: right;
-background-color: rgb(126, 233, 224);
+background-color: rgb(119, 7, 119);
 }
 #icons
 {
-margin-left: 26%;
-margin-top: 12%;
-font-size: 3.5em;
+float: right;
+align-items: center;
+background-color: rgb(66, 5, 66);
+padding: 10px;
+border-radius: 50%;
+border-width: 4px;
+font-size: 30px;
+color: white;
+box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 .text
 {
@@ -289,13 +297,14 @@ font-family: 'aladin';
 letter-spacing: 1px;
 font-size: 35px;
 font-weight: bolder;
-color: rgb(5, 44, 42);
+color: rgb(37, 7, 7); 
 }
 .sub-text
 {
-font-family: 'aladin';
-letter-spacing: 1px;
-font-size: 20px;
-font-weight: 600;
-color: darkred;
+  letter-spacing: 1px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(70, 23, 55); 
+  position: absolute;
+  bottom: 8%;
 }
